# TengenToppaAnimango

./: .gitignore  README.md  manage.py  pyproject.toml  requierments.txt  requirements.txt
TengenToppaAnimango/: asgi.py  urls.py  wsgi.py
apps/anisoc_awards/: apps.py  urls.py  views.py
apps/archive/: apps.py  models.py  urls.py  views.py
apps/events/: admin.py  models.py  urls.py  views.py
apps/history/: admin.py  apps.py  models.py  urls.py  views.py
apps/karaoke/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/members/: admin.py  forms.py  models.py  urls.py  views.py
apps/miscellaneous/: admin.py  apps.py  models.py  urls.py  views.py
apps/news/: admin.py  models.py  urls.py  views.py
apps/showings/: admin.py  anilist_api.py  apps.py  models.py  urls.py  views.py
apps/stream/: models.py  views.py
archive/: admin.py  models.py  urls.py
archive/migrations/: 0001_initial.py
archived_apps/stream/: README.md  admin.py  models.py  urls.py  views.py
config/: urls.py
events/: admin.py  forms.py  models.py  urls.py  views.py
events/migrations/: 0002_auto_20200903_1900.py
history/: models.py  views.py
karaoke/: admin.py  forms.py  models.py  urls.py  views.py
karaoke/migrations/: 0001_initial.py
members/: forms.py  models.py  urls.py  views.py
miscellaneous/: apps.py  urls.py  views.py
news/: admin.py
showings/: admin.py  anilist_api.py  apps.py  models.py  urls.py  views.py
site_info/: urls.py  views.py
templates/: 400.html  403.html  404.html  500.html  base.html  footer.html  menu.html
(+101 files in other folders)
